ms-auth/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ms-auth
  namespace: client-ms-auth
spec:
  rules:
    - host: auth-development.luuna.mx
      http:
        paths:
          - backend:
              service:
                name: ms-auth
                port:
                  number: 80
            path: /health
            pathType: ImplementationSpecific
          - backend:
              service:
                name: ms-auth
                port:
                  number: 80
            path: /graphql
            pathType: ImplementationSpecific
